# Gomoku

./: .gitignore  Cargo.toml  Makefile.toml  README.md  init_gomoku_env.sh  lauch_gomoku.sh  pyvenv.cfg  requirements.txt  start_gomoku.sh
.github/workflows/: rust.yml
GUI/: dialog.ui  howtoplay.ui  howtoplay.ui.autosave  mainwindow.ui  mainwindow.ui.autosave
local/: en_EN  fr_FR
ressources/: python_libs_required.txt
src/: algorithm.rs  bitboard.rs  buttonEventHandler.py  gameManager.py  goban.rs  gomoku.py  lib.rs  node.rs  nodes.rs  rulesSet.py  stone.rs  tree.rs  windowBuilding.py
src/PyInterface/: TODO  buttonEventHandler.py  gameManager.py  gomoku.py  librust_ext.dylib  options.py  rulesSet.py  tmp.py  windowBuilding.py
src/algorithm/: minimax.rs  minmax.rs  mod.rs  mtdf.rs  negamax.rs  tests.rs  transposition_table.rs
src/bitboard/: axis.rs  direction.rs  mod.rs  new_pattern.rs  pattern.rs  tests.rs
src/bitboard/new_pattern/: tests.rs
src/bitboard/pattern/: tests.rs
src/goban/: fscore.rs  heuristic.rs  mod.rs  tests.rs
src/node/: mod.rs  tests.rs
src/tree/: node.rs
srcs/: buttonEventHandler.py  gameManager.py  gomoku.py  options.py  rulesSet.py  windowBuilding.py
