[package]
name = "rust_ext"
version = "0.1.0"
authors = ["Ragarnoy <tiagolernould@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "*"
rayon = "1.4.1"
bitvec = "0.20"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]
