[package]
name = "rust_ext"
version = "0.3.0"
authors = ["tlernoul <tlernoul@student.42.fr>", "vsporer <vsporer@student.42.fr>", "abassibe <abassibe@student.42.fr>", "arlaine <arlaine@student.42.fr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]
